# 99shops

./: .coverage  .gitignore  .pre-commit-config.yaml  alembic.ini  main.py  pyproject.toml
.artifacts/: coverage.xml  tests.xml
app/core/: config.py  connection.py
app/domain/shop/: shop_schema.py  shop_service.py
app/infrastructure/alembic/: env.py
app/infrastructure/alembic/versions/: 0d5e3b33df6d_initial_migration.py  4696160692c1_create_shops_table.py
app/infrastructure/migrations/: env.py
app/infrastructure/migrations/versions/: 0cb38e5475ec_shops_table_included.py  33d0e887fd67_initial_setup.py
app/infrastructure/models/: __init__.py  shop.py  shops.py
app/infrastructure/queries/: shops.py
app/routes/: router.py  service_factory.py
app/routes/shop/: route.py
app/utils/exception/: internal_exception.py
tests/: conftest.py
tests/routes/shop/: test_route.py
tests/sample_data/: shop_creation.json
